fixed scrollbar

--- a/front/src/components/SideBarDefault.scss
+++ b/front/src/components/SideBarDefault.scss
@@ -3,7 +3,7 @@
 .SideBarDefault{
   
   width: 250px;
-  height: 100vh;
+  height: 93vh;
   display: flex;
   flex-direction: column;
   align-items: center;
